--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -108,7 +108,7 @@
   "events.event-id": "Event ID",
   "events.event-name": "Event name",
   "events.event-name-description": "The Name of the Event, will be displayed on leaderboard",
-  "events.event-name-placeholder": "My awsome event",
+  "events.event-name-placeholder": "My awesome event",
   "events.event-date": "Event date",
   "events.event-date-descriprion": "The date for when the event will be held",
   "events.event-date-next-month": "Next month",
@@ -252,7 +252,7 @@
   "fleets.fleet-name-description": "The name of the Fleet.",
   "fleets.no-fleet": "No Fleets",
   "fleets.no-fleet-message": "Please create a fleet.",
-  "fleets.fleet-name-placeholder": "My awsome fleet",
+  "fleets.fleet-name-placeholder": "My awesome fleet",
   "fleets.fleet-name-empty-message": "Fleet name cannot be empty",
   "fleets.header": "Fleets admin",
   "fleets.loading": "Loading fleets",
