first version of the restructured own model page

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -472,7 +472,7 @@
   "topnav.create-user": "Create user",
   "topnav.groups": "Groups",
   "topnav.race-admin": "Manage race",
-  "topnav.models": "Models",
+  "topnav.models-own": "Own models",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
   "topnav.search": "Search",
