changed so that models are deleted after verifying deletion with the modal

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -356,6 +356,8 @@
   "models.no-matches": "No matches",
   "models.no-models-to-display": "No models to display.",
   "models.no-models": "No models",
+  "models.delete-models": "Delete models",
+  "models.delete-model": "Delete model",
   "models.page-size-label": "models",
   "models.upload-date": "Upload date",
   "models.user-name": "User name",
@@ -364,6 +366,13 @@
   "models.md5-hash": "Model MD5",
   "models.md5-hash-metadata": "Metadata MD5",
   "models.model-s3-key": "S3 Key",
+
+  "models.delete-modal.header": "Delete models?",
+  "models.delete-modal.description": "Are you sure you want to delete the following models?",
+  "models.notifications.could-not-upload": "Could not upload model,",
+  "models.notifications.uploading-model": "Uploading model",
+  "models.notifications.upload-successful-1": "Model",
+  "models.notifications.upload-successful-2": "uploaded",
 
   "quarantine.breadcrumb": "Quarantined models",
   "quarantine.header": "Quarantined models",
@@ -472,6 +481,7 @@
   "topnav.create-user": "Create user",
   "topnav.groups": "Groups",
   "topnav.race-admin": "Manage race",
+  "topnav.models": "Models management",
   "topnav.models-own": "Own models",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
@@ -487,7 +497,7 @@
   "topnav.operator": "Operator",
 
   "upload.breadcrumb": "Upload models",
-  "upload.chose-file": "Choose model file(s)",
+  "upload.chose-file": "Upload model",
   "upload.constraint-description": "Upload physical model for racing on the track",
   "upload.constraint-text": "model-name.tar.gz",
   "upload.header-description": "Upload models into DREM ready for racing on the track.",
