changed tranlsation for the sidenav item

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -482,7 +482,7 @@
   "topnav.groups": "Groups",
   "topnav.race-admin": "Manage race",
   "topnav.models": "Models management",
-  "topnav.models-own": "Own models",
+  "topnav.models-own": "Model management",
   "topnav.more": "More",
   "topnav.quarantined-models": "Quarantined models",
   "topnav.search": "Search",
