--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -396,18 +396,18 @@
   "timekeeper.capture-lap": "Capture lap",
   "timekeeper.car-reset": "Car reset",
   "timekeeper.current-lap": "Current lap",
-  "timekeeper.current-racer": "Racer",
+  "timekeeper.current-racer": "Racer name",
   "timekeeper.dnf": "Did not finish",
   "timekeeper.end-race": "End race",
 
   "timekeeper.race-setup-page.page-header": "Race setup",
   "timekeeper.race-setup-page.page-description": "Configure the race",
 
-  "timekeeper.race-page.page-header": "Time keeper",
+  "timekeeper.race-page.page-header": "Timer",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
   "timekeeper.race-page.warning-modal.header": "Warning!",
   "timekeeper.race-page.race-format-header": "Race format",
-  "timekeeper.race-page.automated-timer-header": "Aut. timer",
+  "timekeeper.race-page.automated-timer-header": "Automatic timer",
   "timekeeper.race-page.automated-timer-connected": "Connected",
   "timekeeper.race-page.automated-timer-not-connected": "Not connected",
   "timekeeper.race-page.resume-race": "Resume race",
