--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -295,6 +295,7 @@
   "users.header": "Create user",
   "users.header-list": "Users List",
   "users.header-username": "Username",
+  "users.header-email": "Email address",
   "users.header-creation-date": "Creation date",
   "users.header-last-modified-date": "Last modified date",
   "users.no-users": "No users",
@@ -456,7 +457,7 @@
   "timekeeper.racer-selector.select-car": "Select car from event car fleet",
   "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
   "timekeeper.racer-selector.select-model": "Select model",
-  "timekeeper.racer-selector.select-model-empty": "The user has not upload any models",
+  "timekeeper.racer-selector.select-model-empty": "The users.header-username has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.racer-selector.racer-section-header": "Racer selection",
   "timekeeper.racer-selector.event-section-header": "Event & track selection",
