Exposes users email address in the admin

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -295,6 +295,7 @@
   "users.header": "Create user",
   "users.header-list": "Users List",
   "users.header-username": "Username",
+  "users.header-email": "Email address",
   "users.header-creation-date": "Creation date",
   "users.header-last-modified-date": "Last modified date",
   "users.no-users": "No users",
@@ -405,18 +406,18 @@
   "timekeeper.capture-lap": "Capture lap",
   "timekeeper.car-reset": "Car reset",
   "timekeeper.current-lap": "Current lap",
-  "timekeeper.current-racer": "Racer",
+  "timekeeper.current-racer": "Racer name",
   "timekeeper.dnf": "Did not finish",
   "timekeeper.end-race": "End race",
 
   "timekeeper.race-setup-page.page-header": "Race setup",
   "timekeeper.race-setup-page.page-description": "Configure the race",
 
-  "timekeeper.race-page.page-header": "Time keeper",
+  "timekeeper.race-page.page-header": "Timer",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
   "timekeeper.race-page.warning-modal.header": "Warning!",
   "timekeeper.race-page.race-format-header": "Race format",
-  "timekeeper.race-page.automated-timer-header": "Aut. timer",
+  "timekeeper.race-page.automated-timer-header": "Automatic timer",
   "timekeeper.race-page.automated-timer-connected": "Connected",
   "timekeeper.race-page.automated-timer-not-connected": "Not connected",
   "timekeeper.race-page.resume-race": "Resume race",
@@ -456,7 +457,7 @@
   "timekeeper.racer-selector.select-car": "Select car from event car fleet",
   "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
   "timekeeper.racer-selector.select-model": "Select model",
-  "timekeeper.racer-selector.select-model-empty": "The user has not upload any models",
+  "timekeeper.racer-selector.select-model-empty": "The users.header-username has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.racer-selector.racer-section-header": "Racer selection",
   "timekeeper.racer-selector.event-section-header": "Event & track selection",
