#124 rip out old notifications

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -271,6 +271,7 @@
   "groups.detail.header-group-member": "Group member?",
   "groups.detail.header-last-modified-date": "Last modified date",
   "groups.detail.header-name": "User name",
+  "groups.notfications-error": " {{errorMessage}}, group membership could not be altered for {{userName}}",
   "groups.detail.header-user-enabled": "User enabled?",
   "groups.detail.header": "Users",
   "groups.detail.infromation": "User information",
@@ -308,9 +309,9 @@
   "users.email": "Email",
   "users.email-placeholder": "Email",
   "users.create-user": "Create user",
-  "users.notifications.creating-user": "Creating user...",
-  "users.notifications.user-created": "User created",
-  "users.notifications.user-not-created": "User could not be created",
+  "users.notifications.creating-user": "Creating user {{username}}...",
+  "users.notifications.user-created": "User {{username}} created",
+  "users.notifications.user-not-created": "User {{username}} could not be created, {{errorMessage}}",
   "users.terms-and-conditions": "Terms and Conditions",
   "users.terms-and-conditions-error": "Please agree to the terms and conditions",
   "users.terms-and-conditions-title": "Agreement",
