--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -110,7 +110,7 @@
   "events.event-name-description": "The Name of the Event, will be displayed on leaderboard",
   "events.event-name-placeholder": "My awesome event",
   "events.event-date": "Event date",
-  "events.event-date-descriprion": "The date for when the event will be held",
+  "events.event-date-description": "The date for when the event will be held",
   "events.event-date-next-month": "Next month",
   "events.event-date-previous-month": "Previous month",
   "events.event-date-today": "Today",
@@ -516,6 +516,7 @@
   "topnav.registration": "Registration",
   "topnav.users": "Users",
   "topnav.operator": "Operator",
+  "topnav.stats": "Statistics",
 
   "upload.breadcrumb": "Upload models",
   "upload.chose-file": "Upload model",
