--- a/website/public/locales/de/translation.json
+++ b/website/public/locales/de/translation.json
@@ -269,14 +269,12 @@
   "home.header": "DeepRacer Eventmanager",
   "home.leaderboard-description": "Auf Event-Bestenlisten zugreifen",
   "home.leaderboard": "Bestenliste",
-  "home.models-description": "Liste der Models, die du hochgeladen hast",
+  "home.models-description": "Model Verwaltung",
   "home.models": "Modelle",
   "home.quarantined-description": "Alle Modelle, die beim Upload als verdächtig markiert wurden",
   "home.quarantined": "Unter Quarantäne gestellte Modelle",
   "home.time-keeper-description": "Zeitmesser für die Veranstaltung",
   "home.time-keeper": "Zeitwächter",
-  "home.upload-description": "Lade Modelle in DREM hoch, um sie an Rennwagen zu schicken",
-  "home.upload": "Hochladen",
   "models.all-header": "Modelle",
   "models.breadcrumb": "Modelle",
   "models.clear-filter": "Filter löschen",
@@ -517,5 +515,24 @@
   "users.notifications.creating-user": "Benutzer {{username}} anlegen...",
   "users.notifications.user-created": "Benutzer {{username}} angelegt",
   "users.notifications.user-not-created": "Benutzer {{username}} konnte nicht angelegt werden, {{errorMessage}}",
-  "user-profile.settings.form.pw_changed": "Passwort erflogreich geändert"
+  "user-profile.settings.form.pw_changed": "Passwort erflogreich geändert",
+  "events.selector.current-events": "Aktuelle Events",
+  "events.selector.events-with-missing-date": "Events ohne Event Datum",
+  "events.selector.future-events": "Zukünftige Events",
+  "events.selector.option-description": "Event Datum: {{eventDate}}, Leiter: {{eventLead}}",
+  "events.selector.past-events": "Vergangene Events",
+  "events.selector.track": "Strecke: {{trackId}}",
+  "events.selector.track-type": "Typ: {{trackType}}",
+  "notifications.create-item-error": "{{itemType} {{itemName}} konnte nicht angelegt werden, {{errorMessage}}",
+  "notifications.create-item-success": "{{itemType}} {{itemName}} angelegt",
+  "notifications.creating-item": "Erstelle {{itemType}} {{itemName}}...",
+  "notifications.delete-item-error": "{{itemType}} {{itemName}} konnte nicht gelöscht werden, {{errorMessage}}",
+  "notifications.delete-item-success": "{{itemType}} {{itemName}} gelöscht",
+  "notifications.deleting-item": "Lösche {{itemType}} {{itemName}}...",
+  "notifications.item-type-event": "Event",
+  "notifications.update-item-error": "{{itemType}} {{itemName}} konnte nicht geändert werden, {{errorMessage}}",
+  "notifications.update-item-success": "{{itemType}} {{itemName}} geändert",
+  "notifications.updating-item": "Ändere {{itemType}} {{itemName}}...",
+  "topnav.stats": "Statistiken",
+  "user-profile.settings.form.label.new_pw_conf.ph": "Bestätige neues Passwort"
 }
