--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -355,14 +355,12 @@
   "home.header": "DeepRacer Event Manager",
   "home.leaderboard-description": "Access event leaderboards",
   "home.leaderboard": "Leaderboard",
-  "home.models-description": "List of the models you have uploaded",
+  "home.models-description": "Model management",
   "home.models": "Models",
   "home.quarantined-description": "Any models that have been flagged as suspicious during upload",
   "home.quarantined": "Quarantined models",
   "home.time-keeper-description": "Event time keeper",
   "home.time-keeper": "Time keeper",
-  "home.upload-description": "Upload models into DREM ready to send to cars for racing",
-  "home.upload": "Upload",
 
   "models.all-header": "Models",
   "models.breadcrumb": "Models",
