Resolve "Enable multi track functionality for event configs and leaderboard"

--- a/website/public/locales/de/translation.json
+++ b/website/public/locales/de/translation.json
@@ -362,16 +362,16 @@
   "timekeeper.racer-selector.loading-racers": "Rennfahrer werden geladen",
   "timekeeper.racer-selector.loading-cars": "Fahrzeuge werden geladen",
   "timekeeper.racer-selector.loading": "wird geladen",
-  "timekeeper.racer-selector.select-event": "Veranstaltung auswählen",
+  "event-selector-modal.select-event": "Veranstaltung auswählen",
   "timekeeper.racer-selector.select-racer": "Wähle einen Rennfahrer aus",
-  "timekeeper.racer-selector.select-track": "Strecke",
+  "event-selector-modal.select-track": "Strecke",
   "timekeeper.racer-selector.select-car": "Wähle ein Fahrzeug aus der Event-Fahrzeugflotte aus",
   "timekeeper.racer-selector.select-car-empty": "Die Veranstaltung wurde keiner Fahrzeugflotte zugeordnet oder es gibt keine Fahrzeug(e) in der Flotte",
   "timekeeper.racer-selector.select-model": "Modell auswählen",
   "timekeeper.racer-selector.select-model-empty": "Der Benutzer hat keine Modelle hochgeladen",
   "timekeeper.racer-selector.selected": "Ausgewählt",
   "timekeeper.racer-selector.racer-section-header": "Auswahl des Rennfahrers",
-  "timekeeper.racer-selector.event-section-header": "Event- und Streckenauswahl",
+  "event-selector-modal.event-section-header": "Event- und Streckenauswahl",
   "timekeeper.recorded-laps": "Aufgezeichnete Runden",
   "timekeeper.resets": "Zurückgesetzt",
   "timekeeper.start-race": "Rennen starten",
