--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -4,6 +4,7 @@
   "button.cancel": "Cancel",
   "button.clear-selected": "Clear selected",
   "button.confirm": "Confirm",
+  "button.save": "Save",
   "button.copy": "Copy",
   "button.delete": "Delete",
   "button.edit": "Edit",
@@ -107,6 +108,7 @@
   "events.delete-warning": "Are you sure you want to delete these event(s)?",
   "events.event-id": "Event ID",
   "events.event-name": "Event name",
+  "events.add-track-to-event": "Add additional track to event",
   "events.event-name-description": "The Name of the Event, will be displayed on leaderboard",
   "events.event-name-placeholder": "My awesome event",
   "events.event-date": "Event date",
@@ -121,6 +123,8 @@
   "events.filter": "Filter cars",
   "events.car-fleet": "Car fleet",
   "events.track-type": "Track",
+  "events.track-prefix": "Track {{trackId}}",
+  "events.combined": "Combined",
   "events.country": "Country",
   "events.country-description": "Where will the event be hosted",
   "events.header": "Events admin",
@@ -173,7 +177,10 @@
   "events.race.ranking.average-lap-time": "Average lap time",
   "events.race.ranking.finish-x-laps": "Finish x laps",
   "events.race.race-customisations": "Race customisations",
+  "events.race.allowed-races-per-racer-label": "Allowed races per racer",
+  "events.race.allowed-races-per-racer-description": "The maximum number of races a racer is allowed to do during an event",
 
+  "events.sponsor.label": "Sponsor",
   "events.fleet-info.label": "Car Fleet",
   "events.fleet-info.description": "Select the fleet of cars to use for the event.",
 
@@ -194,8 +201,7 @@
   "events.selector.past-events": "Past events",
   "events.selector.events-with-missing-date": "Events with missing event date",
   "events.selector.option-description": "Event date: {{eventDate}}, Lead: {{eventLead}}",
-  "events.selector.track": "Track: {{trackId}}",
-  "events.selector.track-type": "Type: {{trackType}}",
+  "events.selector.track-type": "Track type: {{trackType}}",
 
   "race-admin.header": "Race management",
   "race-admin.description": "",
@@ -430,6 +436,7 @@
 
   "timekeeper.race-setup-page.page-header": "Race setup",
   "timekeeper.race-setup-page.page-description": "Configure the race",
+  "timekeeper.race-setup-page.racing-on-trackId": "racing on track",
 
   "timekeeper.race-page.page-header": "Timer",
   "timekeeper.race-page.warning-modal.text": "Are you sure you want to end the race?",
@@ -469,21 +476,23 @@
   "timekeeper.racer-selector.loading-racers": "Loading racers",
   "timekeeper.racer-selector.loading-cars": "Loading cars",
   "timekeeper.racer-selector.loading": "loading",
-  "timekeeper.racer-selector.select-event": "Select event",
   "timekeeper.racer-selector.select-racer": "Select racer",
-  "timekeeper.racer-selector.select-track": "Track",
   "timekeeper.racer-selector.select-car": "Select car from event car fleet",
   "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
   "timekeeper.racer-selector.select-model": "Select model",
   "timekeeper.racer-selector.select-model-empty": "The users.header-username has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.racer-selector.racer-section-header": "Racer selection",
-  "timekeeper.racer-selector.event-section-header": "Event & track selection",
   "timekeeper.recorded-laps": "Recorded Laps",
   "timekeeper.resets": "Resets",
   "timekeeper.start-race": "Start race",
   "timekeeper.time-left": "Time Left",
   "timekeeper.undo-false-finish": "Undo false finish",
+
+  "event-selector-modal.select-track": "Track",
+  "event-selector-modal.select-event": "Select event",
+  "event-selector-modal.event": "Event",
+  "event-selector-modal.event-section-header": "Event & track selection",
 
   "topnav.admin": "Admin",
   "topnav.all-models": "All models",
