--- a/website/public/locales/jp/translation.json
+++ b/website/public/locales/jp/translation.json
@@ -429,16 +429,16 @@
     "timekeeper.racer-selector.loading-racers": "Loading racers",
     "timekeeper.racer-selector.loading-cars": "Loading cars",
     "timekeeper.racer-selector.loading": "loading",
-    "timekeeper.racer-selector.select-event": "Select event",
+    "event-selector-modal.select-event": "Select event",
     "timekeeper.racer-selector.select-racer": "Select racer",
-    "timekeeper.racer-selector.select-track": "Track",
+    "event-selector-modal.select-track": "Track",
     "timekeeper.racer-selector.select-car": "Select car from event car fleet",
     "timekeeper.racer-selector.select-car-empty": "Event has not been associated with a car fleet or there is no cars in the fleet",
     "timekeeper.racer-selector.select-model": "Select model",
     "timekeeper.racer-selector.select-model-empty": "The user has not upload any models",
     "timekeeper.racer-selector.selected": "Selected",
     "timekeeper.racer-selector.racer-section-header": "Racer selection",
-    "timekeeper.racer-selector.event-section-header": "Event & track selection",
+    "event-selector-modal.event-section-header": "Event & track selection",
     "timekeeper.recorded-laps": "Recorded Laps",
     "timekeeper.resets": "Resets",
     "timekeeper.start-race": "Start race",
