Races by racer ui tweaks

--- a/website/public/locales/en/translation.json
+++ b/website/public/locales/en/translation.json
@@ -483,6 +483,9 @@
   "timekeeper.racer-selector.select-model-empty": "The users.header-username has not upload any models",
   "timekeeper.racer-selector.selected": "Selected",
   "timekeeper.racer-selector.racer-section-header": "Racer selection",
+  "timekeeper.racer-selector.races-by-user": "Races done by racer",
+  "timekeeper.racer-selector.number-of-current-races": "Current:",
+  "timekeeper.racer-selector.max-number-of-allowed-races": "Max:",
   "timekeeper.recorded-laps": "Recorded Laps",
   "timekeeper.resets": "Resets",
   "timekeeper.start-race": "Start race",
