Email address can now be viewed for users when using group admin

--- a/website/public/locales/de/translation.json
+++ b/website/public/locales/de/translation.json
@@ -118,7 +118,7 @@
   "events.event-type": "Art der Veranstaltung",
   "events.event-type-description": "",
   "events.type.private-workshop": "Privater Workshop",
-  "events.type.offical-workshop": "Öffentlicher Workshop",
+  "events.type.official-workshop": "Öffentlicher Workshop",
   "events.type.private-track-race": "Privates Streckenrennen",
   "events.type.official-track-race": "Öffentliches Bahnrennen",
   "events.type.other": "Andere",
@@ -436,7 +436,7 @@
   "common.panel.split-panel-position-description": "Standart Split Panel Position für den Service wählen",
   "common.panel.split-panel-position-label": "Split Panel Position",
   "common.panel.split-panel-preference-title": "Split panel Einstellungen",
-  "common.panel.split-panel-rezize-label": "Split Panel Größe ändern",
+  "common.panel.split-panel-resize-label": "Split Panel Größe ändern",
   "events.created-by": "Erzeugt von",
   "events.landing-page-link": "Landing Page",
   "events.landing-page-link-new-tab": "In neuem Tab öffnen",
@@ -455,7 +455,7 @@
   "events.streaming-overlay-link-chroma-same-tab": "In diesem Tab öffnen",
   "events.tracks.atoz-speedway": "A to Z Speedway",
   "fleets.created-by": "Angelegt von",
-  "groups.detail.infromation": "Nutzerinformationen",
+  "groups.detail.information": "Nutzerinformationen",
   "groups.notfications-error": "{{errorMessage}}, Gruppenzugehörigkeit konnte für {{userName}} nicht geändert werden",
   "models.delete-modal.description": "Möchtest Du das Model wirklich löschen?",
   "models.delete-modal.header": "Model löschen?",
@@ -480,7 +480,7 @@
   "race-admin.multi-select.total-laps": "Gesamte Runden",
   "race-admin.multi-select.total-resets": "Gesamt Resets",
   "race-admin.multi-select.unique-racer-count": "Anzahl eindeutige Rennfahrer(innen)",
-  "table.select-visible-colunms": "Sichtbare Spalten wählen",
+  "table.select-visible-columns": "Sichtbare Spalten wählen",
   "topnav.models-own": "Modele Verwalten",
   "topnav.operator": "Operator",
   "topnav.registration": "Registrierung",
