--- a/website/public/locales/jp/translation.json
+++ b/website/public/locales/jp/translation.json
@@ -25,7 +25,7 @@
     "common.panel.split-panel-preference-title": "分割パネル設定",
     "common.panel.split-panel-position-label": "分割パネルの位置",
     "common.panel.split-panel-position-description": "Choose the default split panel position for the service.",
-    "common.panel.split-panel-rezize-label": "分割ペインのサイズ変更",
+    "common.panel.split-panel-resize-label": "分割ペインのサイズ変更",
 
     "car-activation.breadcrumb": "車アクティベーション",
     "car-activation.copied-to-clipboard": "クリップボードに",
@@ -143,7 +143,7 @@
     "events.event-type": "イベントタイプ",
     "events.event-type-description": "",
     "events.type.private-workshop": "Private workshop",
-    "events.type.offical-workshop": "Public workshop",
+    "events.type.official-workshop": "Public workshop",
     "events.type.private-track-race": "Private track race",
     "events.type.official-track-race": "Public track race",
     "events.type.other": "Other",
@@ -251,7 +251,7 @@
     "fleets.fleet-name-description": "The name of the Fleet.",
     "fleets.no-fleet": "No Fleets",
     "fleets.no-fleet-message": "Please create a fleet.",
-    "fleets.fleet-name-placeholder": "My awsome fleet",
+    "fleets.fleet-name-placeholder": "My awesome fleet",
     "fleets.fleet-name-empty-message": "Fleet name cannot be empty",
     "fleets.header": "Fleets admin",
     "fleets.loading": "Loading fleets",
@@ -272,7 +272,7 @@
     "groups.detail.header-name": "User name",
     "groups.detail.header-user-enabled": "User enabled?",
     "groups.detail.header": "Users",
-    "groups.detail.infromation": "User information",
+    "groups.detail.information": "User information",
     "groups.detail.loading-users": "Loading users",
     "groups.detail.page-size-label": "users",
     "groups.filter-groups": "Filter groups",
@@ -374,7 +374,7 @@
     "table.previous-page": "Previous page",
     "table.registration-date": "Registration date",
     "table.select-page-size": "Select page size",
-    "table.select-visible-colunms": "Select visible colunms",
+    "table.select-visible-columns": "Select visible columns",
     "table.we-cant-find-a-match": "We can't find a match",
     "table.wrap-lines": "Wrap lines",
     "table.wrap-lines-description": "Check to see all the text and wrap the lines",
